--- a/package.json
+++ b/package.json
@@ -9,14 +9,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/shuding/nextra-docs-template.git"
+    "url": "https://github.com/infimas/CSESPro"
   },
-  "author": "Shu Ding <g@shud.in>",
+  "author": "Irfan Mansoori",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/shuding/nextra-docs-template/issues"
-  },
-  "homepage": "https://github.com/shuding/nextra-docs-template#readme",
+  "homepage": "https://github.com/infimas/CSESPro?tab=readme-ov-file",
   "dependencies": {
     "next": "^13.0.6",
     "nextra": "latest",
