--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
   "license": "MIT",
   "homepage": "https://github.com/infimas/CSESPro?tab=readme-ov-file",
   "dependencies": {
+    "@mdx-js/mdx": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "next": "^13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
